# c-args-parser

./: .clang-format  .editorconfig  .gitattributes  LICENSE  README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: ci.yml
examples/: 01_hello.c  02_cp_like.c  03_remote.c  04_groups.c  05_docs_completion.c  06_env_defaults.c  07_sizes.c  08_demo.c  meson.build
src/: c-args-parser.h
tests/: cargs.tests.c
